Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-title: API Docs
+title: IncoBot-TS3 Documentation
 ---
+
 {% assign sorted_collections = site.collections | sort: "position" %}
 {% for collection in sorted_collections %}
 	{% assign sorted_docs = collection.docs | sort: "position" %}
